--- a/plugins/devtools-common/package.json
+++ b/plugins/devtools-common/package.json
@@ -39,6 +39,7 @@
     "test": "backstage-cli package test"
   },
   "dependencies": {
+    "@backstage/backend-plugin-api": "workspace:^",
     "@backstage/plugin-permission-common": "workspace:^",
     "@backstage/types": "workspace:^"
   },
