--- a/plugins/devtools/package.json
+++ b/plugins/devtools/package.json
@@ -61,6 +61,7 @@
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "luxon": "^3.5.0",
     "react-json-view": "^1.21.3",
     "react-use": "^17.2.4"
   },
