feat: init commit
Signed-off-by: Oliver Dirks <oliver.dirks@gothaer.de>

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -144,6 +144,12 @@ proxy:
 organization:
   name: My Company
 
+devTools:
+  scheduledTasks:
+    - plugin: catalog
+    - plugin: search
+
+
 # Reference documentation http://backstage.io/docs/features/techdocs/configuration
 # Note: After experimenting with basic setup, use CI/CD to generate docs
 # and an external cloud storage when deploying TechDocs for production use-case.
